# Process this file with autoconf to produce a configure script.
AC_INIT(glogger.c)
AC_CONFIG_SRCDIR(glogger.c)

top_objdir=`pwd`
AC_SUBST(top_objdir)

AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
AC_CHECK_LIB(m, main)
AC_CHECK_LIB(crypto, main)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

AC_CHECK_HEADER([net-snmp/net-snmp-config.h],
[useucd=
 AC_CHECK_LIB(netsnmp, main)
],
[
  AC_CHECK_HEADER([ucd-snmp/ucd-snmp-config.h],
  [useucd=-DUSE_UCDHEADER
   AC_CHECK_LIB(snmp, main)
  ],
  [echo "Please install the net-snmp or ucd-snmp package."
   exit 1
  ])
])
AC_SUBST(useucd)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRTOD
AC_CHECK_FUNCS([floor gethostbyname gettimeofday inet_ntoa localtime_r memset munmap rint select strtoul strtol])

AC_ARG_ENABLE(printtime,
[  --enable-printtime       use -DPRINTTIME],
[printtime=-DPRINTTIME
],
[printtime=
])
AC_SUBST(printtime)

AC_ARG_ENABLE(hook_snmp_free_pdu,
[  --enable-hook_snmp_free_pdu],
[hook_snmp_free_pdu=-DHOOK_snmp_free_pdu
],
[hook_snmp_free_pdu=
])
AC_SUBST(hook_snmp_free_pdu)

AC_ARG_WITH(dlopen,
[  --with-dlopen=<libsnmp.so path>   when using --enable-hook_snmp_free_pdu],
[snmpdlopen="-DUSE_DLOPEN=\\\"${withval}\\\""
 AC_CHECK_LIB(dl, dlopen)
],
[snmpdlopen=
])
AC_SUBST(snmpdlopen)

AC_CONFIG_FILES(Makefile config.mk glogd docbook/ja/Makefile)
AC_OUTPUT
